--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding :0;
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -13,9 +16,9 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar{
+  background-color: #1183e6;
+  padding:10px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
