--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,202 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.navbar {
+  background: linear-gradient(45deg, #00d2ff 0%, #3a47d5 100%);
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  color: white;
+}
+
+.single_card {
+  font-size: 1em;
+  display: flex;
+  flex-direction: column;
+  color: black;
+
+  border: 2px solid steelblue;
+  border-radius: 20px;
+  /* max-width: 500px; */
+  box-shadow: 10px 10px 30px rgb(0, 0, 0, 0.2);
+  justify-content: space-around;
+  width: auto;
+}
+
+.title {
+  font-size: 1.3rem;
+  font-weight: bold;
+  text-align: center;
+
+  padding: 0.5rem;
+  border-radius: 20px;
+}
+.notes_section {
+  /* width: 80%; */
+  display: grid;
+  border-radius: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-auto-rows: max-content;
+  column-gap: 30px;
+  row-gap: 30px;
+  /* background: linear-gradient(90deg, #1CB5E0 0%, #0e1872 100%); */
+  padding: 1rem;
+  height: 79vh;
+
+}
+.message {
+  font-weight: 500;
+  /* width:400px; */
+  padding: 1rem;
+  /* min-height: 100px; */
+  overflow-wrap: break-word;
+}
+.note_buttons {
+  display: flex;
+  /* border: solid black 2px; */
+  justify-content: space-around;
+  padding: 0.7rem;
+}
+.user-profile {
+  padding: 0 0.7rem;
+}
+
+.createsection {
+  max-width: 20%;
+  padding: 1rem;
+  height: 84vh;
+  border-radius: 20px;
+  background: linear-gradient(45deg, #fcff9e 0%, #e7c105 100%);
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: white;
+  /* text-align: center; */
+}
+
+.createsection > h1 {
+  text-decoration: underline;
+}
+
+.containers {
+  padding: 2rem 0;
+  /* margin: 2rem; */
+  display: flex;
+  flex-direction: row;
+}
+
+.form {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+.input {
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  padding: 0.5rem;
+  text-align: center;
+  margin: 1rem;
+  /* font-size:1rem; */
+}
+.submit {
+  margin: 2rem 0;
+}
+
+.centerdiv {
+  z-index: 10;
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  top: 50%;
+  transform: translate(140%, -45%);
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  font-size: 2rem;
+  text-align: center;
+  /* align-items: center; */
+  justify-content: center;
+}
+
+.textarea {
+  width: 100%;
+  margin: 2rem 0;
+  border: 2px solid black;
+}
+
+.close {
+  font-size: 1.5rem;
+
+}
+
+.hidden {
+  display: none;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  background:linear-gradient(90deg, #1CB5E0 0%, #0e1872 100%);
+  opacity: 0.58;
+  width: 100vw;
+  height: 100vh;
+}
+.App -webkit-scrollbar {
+  display: none;
+}
+.paginatonBttns {
+  
+  list-style-type: none;
+ 
+}
+
+.paginationBttns a {
+  padding: 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid #2b23ff;
+  color: #2b23ff;
+  cursor: pointer;
+}
+
+.paginationBttns a:hover {
+  background-color: #2b23ff;
+  color: white;
+}
+
+.paginationActive a {
+  background-color: #2b23ff;
+  color: white;
+}
+
+.different{
+  display: flex;
+  flex-direction: row;
+  margin-top: 1.2rem;
+  width: 100%;
+  align-items: center;
+  justify-content: center ;
+  list-style: none;
+}
+.section_cover{
+  width: 100%;
 }
